[package]
name = "rust-jira"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clearscreen = "2.0.1"
ellipse = "0.2.0"
itertools = "0.11.0"
serde = {version = "1.0.190", features = ["derive"]}
serde_json = "1.0.108"

[dev-dependencies]
tempfile = "3.8.1"
